# pardus-gnome-shortcuts

./: .gitignore  README.md  meson.build  pardus-gnome-shortcuts  setup.py  test.py  tr.org.pardus.pardus-gnome-shortcut.desktop  tr.org.pardus.pardus-gnome-shortcuts.desktop  update_translations.sh
.github/ISSUE_TEMPLATE/: bug_report.md
data/: data.json  shortcuts.json  style.css
data/assets/: bg.avif
data/po/: LINGUAS  POTFILES  es.po  files  pardus-gnome-shortcuts.pot  pt.po  tr.po
data/schema/: gschemas.compiled  tr.org.pardus.pardus-gnome-greeter.gschema.xml  tr.org.pardus.pardus-gnome-shortcuts.gschema.xml
debian/: changelog  control  copyright  meson.build  rules
pardus-gnome-shortcuts@dev.pardus.org.tr/: extension.js  metadata.json
src/: Keybindings.py  Main.py  MainWindow.py  test.py  utils.py
